<resources>
    <string name="app_name">习惯星</string>
    <string name="need_location_please_open_gps">需要您的位置信息，请打开GPS</string>
    <string name="open">打开</string>
    <string name="cancel">取消</string>
    <string name="take_photo">拍摄</string>
    <string name="from_gallery">从相册中选择</string>
    <string name="look">查看</string>
    <string name="get_no_data_remind">无更多数据</string>
    <string name="get_data_finish_remind">您的数据已经加载完成了</string>


    <string name="no_data">没有数据</string>
    <string name="no_data_network">请检查网络～</string>
    <string name="need_permission_to_use_this_function">该功能需要权限</string>
    <string name="lack_of_permission_function_cannot_run_click_to_go_setting">
        缺少权限，功能无法正常使用，请点击确定去设置中允许权限
    </string>
    <string name="remind">提示</string>
    <string name="confirm">确定</string>
    <string name="processing_failed">处理失败</string>
    <string name="back">返回</string>
    <string name="submit">提交</string>
    <string name="next">下一步</string>
    <string name="save">保存</string>
    <string name="save_error">保存失败</string>
    <string name="publish_error">发布失败</string>
    <string name="error_upload_file">上传文件失败</string>
    <string name="upload_success">上传成功</string>
    <string name="error_upload">上传失败</string>
    <string name="refresh">刷新</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="message">消息</string>
    <string name="order">订单</string>
    <string name="work">工作</string>
    <string name="consultation">资讯</string>
    <string name="error_init_failed">初始化失败</string>
    <string name="login_failed">登录失败</string>
    <string name="register_failed">注册失败</string>
    <string name="getUserInfoError">获取用户信息失败</string>
    <string name="get_data_error">获取数据错误</string>
    <string name="applay_failure">申请失败</string>
    <string name="edit_error">修改失败</string>
    <string name="setting">设置</string>
    <string name="tool_setting_title">功能开关</string>
    <string name="my_msg">我的信息</string>
    <string name="modify_password">修改登录密码</string>
    <string name="clear_cache">缓存管理</string>
    <string name="check_version">检测更新</string>
    <string name="yh_hz">用户须知</string>
    <string name="exit_login">退出登录</string>
    <string name="head">头像</string>
    <string name="nick">昵称</string>
    <string name="sex">性别</string>
    <string name="gcxx">工厂信息</string>
    <string name="error_cant_get_file_path">无法获取到文件路径</string>
    <string name="name">名称</string>
    <string name="fr_msg">法人信息</string>
    <string name="please_input_name">名称</string>
    <string name="phone_number">手机号</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="sfzh">身份证号</string>
    <string name="please_input_sfzh">请输入身份证号</string>
    <string name="please_upload_card_zm">请上传身份证正面</string>
    <string name="please_upload_card_fm">请上传身份证反面</string>
    <string name="please_upload_card_sc">请上传身份证手持</string>
    <string name="gc_type">工厂类型</string>

    <string name="select">选择</string>
    <string name="zfb">支付宝</string>
    <string name="name_tixian">姓名</string>
    <string name="add_data">资料填写</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="please_input">请输入</string>
    <string name="lxr">联系人</string>
    <!--EditContentFragment-->
    <string name="edit_content">编辑内容</string>
    <string name="clear_edit_text_content">清空输入框</string>
    <string name="input_content">输入内容</string>
    <!--LoginFragment-->
    <string name="forget_password">忘记密码</string>
    <string name="regist_new_user">注册新用户</string>
    <string name="login">登录</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_password">请输入账号密码</string>
    <!--RegisterFragment-->
    <string name="regist_new_title">新用户注册</string>
    <string name="please_input_msg_code">请输入短信验证码</string>
    <string name="send_msg_code">发送验证码</string>
    <string name="is_equipment_purchased">是否已购买设备</string>
    <string name="agree">同意</string>
    <string name="user_service_agreement">《用户服务协议》</string>
    <string name="register">注册</string>
    <!--RetrievePasswordFragment-->
    <string name="retrieve_password">找回密码</string>
    <!--MainActivity-->
    <string name="train">训练</string>
    <string name="young_general">小将</string>
    <string name="find">发现</string>
    <!--MineFragment-->

    <string name="offset" />
    <string name="isUp" />
    <string name="cube_views_load_more_loading">loading...</string>
    <string name="cube_views_load_more_click_to_load_more">Click to load more</string>
    <string name="cube_views_load_more_loaded_no_more">All the data has been loaded</string>
    <string name="cube_views_load_more_loaded_empty">It is empty. :(</string>
    <string name="cube_views_load_more_error">Load error, click to retry</string>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>


    <string name="giraffe_player_url_empty">Please specify the address of the video playback</string>

    <string name="small_problem">Player encountered a small problem</string>

    <string name="can_not_play">can not play this video</string>

    <string name="not_support">player not support this device</string>

    <string name="pk_shuoming"> PK规则说明\n
1、PK赛参与者双方均为使用习惯星智能跳绳产品的用户，暂不支持其他跳绳产品的用户。\n
2、PK赛分为不同的场次，参与者进入不同的场次需要达到一定的等级，该等级由习惯星平台结合参与者日常跳绳成绩及参与度自行认证，而非专业跳绳等级的认证，请参与者根据选择适合自己的赛场。\n
3、参与者双方的PK结果将根据跳绳时间、跳绳个数等判断胜负。</string>

    <string name="xieyiandtiaokuan">
        温馨提示\n
感谢您信任并使用习惯星的产品和服务！\n
我们非常注重您的个人信息和隐私的保护，为了更好地为您提供服务，特向您说明以下内容：\n
1、我们将在法律允许的范围内，基于您的明示授权，在您使用某些功能和服务时，收集必要的用户信息、设备权限（如手机号、设备信息、地理位置等），您有权拒绝或取消授权。\n
2、未经您的授权同意，我们不会将您的信息共享给第三方或用于其他您未授权的用途；\n
3、我们会采取业内先进的安全措施保护您的信息安全；\n
4、请您仔细阅读《用户服务协议》和《隐私政策》的全部内容。如果您是未满18周岁的未成年人，请在使用我们的产品、提交个人信息前，务必征求您的监护人的指导和同意。点击「同意」，即表示您和您的监护人同意并接受全部条款。\n
若您选择不同意，将无法使用我们的产品和服务，并退出应用。\n
    </string>

</resources>
